# xianxuanai

./: .coveragerc  .gitignore  Dockerfile  _add_cell_diversity_system.py  auto_gpt_plugin_template.py  clean_decide.py  deploy.ps1  deploy.sh  emotion_engine.py  fix_decide_indent.py  fix_self_learning_header.py  ftfy.py  insert_helpers.py  orjson.py  playsound.py  pso.py  pyproject.toml  replace_decide.py  run  update_decide.py
.github/workflows/: algorithms-benchmark.yml  algorithms-tests.yml  autogpt-agent-image.yml  autogpt-ci.yml  autogpt-docker-ci.yml  container-release.yml  python-tests-coverage.yml  version-check.yml
BrainSimulationSystem/: __init__.py  brain_simulation.py  curriculum.py  enhanced_brain_system.py  module_registry.py  production_main.py  run_tests.py
BrainSimulationSystem/api/: brain_api.py  routes.py  streaming.py
BrainSimulationSystem/backends/: backend_manager.py  enhanced_backend_system.py  framework_integration.py  neuromorphic_hardware.py
BrainSimulationSystem/cognition/: creativity.py  reasoning.py
BrainSimulationSystem/config/: backend_config.py  cognitive_defaults.py  default_config.py  enhanced_brain_config.py  enhanced_brain_config.yaml  hierarchical_network_config.py  stage_profiles.py
BrainSimulationSystem/core/: __init__.py  anatomy.py  attention_module.py  auditory_cortex.py  automation_check.py  axonal_delay.py  backends.py  body_model.py  cell_diversity.py  cognition_binding.py  cognitive_brain_mapping.py  cognitive_services.py  compartments.py  complete_brain_system.py  (+80 more)
algorithms/: __init__.py  algorithm_manager.py  base.py  plugin_loader.py  template.py  utils.py
autogpt/: __init__.py
autogpts/: autogpt
backend/: __init__.py  agent_factory.py  concept_alignment.py  energy_minimization.py  events.py  factory.py  pso.py  rag_retriever.py
backend/forge/: pyproject.toml  run
backend/forge/forge/: __main__.py  agent.py  app.py  autonomy.py  ui_api.py
backend/forge/forge/actions/: __init__.py  generated_handler.py  registry.py
backend/forge/forge/actions/web/: web_selenium.py
backend/forge/forge/sdk/: __init__.py  agent.py  agent_test.py  db.py  db_test.py  errors.py  model.py  prompting.py  workspace.py
backend/forge/forge/sdk/routes/: agent_protocol.py
benchmarks/: __init__.py  compare_benchmarks.py  compare_multicap_benchmarks.py  developmental_benchmark.py  evolving_cognitive_architecture_benchmark.py  memory_embedding_strategy.py  performance_monitor_benchmark.py  pso_benchmark.py  run_ab_test.py  run_cross_domain.py  summarize_pytest_json.py  test_creativity_benchmark.py  test_graph_benchmark.py  test_io_benchmark.py  test_quantum_benchmark.py  test_quantum_vs_classical_benchmark.py  test_sorting_benchmark.py
capability/: __init__.py  librarian.py
colorama/: __init__.py
common/: __init__.py  logging_config.py
config/: agent_event_schema.json  assets.json  benchmark.yaml  concept_alignment.yaml  dynamic_network.yaml  experiment.yaml  gateway.yaml  logging.yaml  meta_learning.yaml  monitoring.yaml  rl_tasks.yaml
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
docker/: __init__.py  errors.py
docs/: brain_backends.md  scheduler_design.md
duckduckgo_search/: __init__.py
events/: __init__.py  client.py  coordination.py
evolution/: __init__.py
forge/: __init__.py
frontend/: pubspec.yaml  run  run.py  streamlit_dashboard.py
inflection/: __init__.py
knowledge/: __init__.py
memory/: disabled_modules.json
modules/: __init__.py  autonomy.py  meta_cognition.py  pso.py  task_scheduler.py
modules/benchmark/: ab_testing.py  embedding_search_benchmark.py  ga_benchmark.py  pyproject.toml  resource_rl_benchmark.py  run.sh  skill_retrieval_benchmark.py  task_queue_benchmark.py
modules/benchmark/agbenchmark/: __main__.py  agent_interface.py  config.py  main.py
modules/benchmark/agbenchmark/challenges/: webarena.py
modules/benchmark/agbenchmark/utils/: utils.py
modules/benchmark/agbenchmark/utils/dependencies/: graphs.py
modules/benchmark/reports/: send_to_googledrive.py
modules/benchmark/tests/: test_ab_testing.py  test_is_circular.py
monitoring/: __init__.py
openai/: __init__.py  _base_client.py  _exceptions.py
org_charter/: __init__.py  io.py
psutil/: __init__.py
pydantic/: __init__.py  decorators.py  errors.py  fields.py  main.py  types.py
reasoning/: __init__.py
schemas/: __init__.py  emotion.py
scripts/: __init__.py  autogpt_rl_phase2_bootstrap.py  build_code_doc_self_supervised_dataset.py  bump_version.py  calibrate_biophysical.py  check_version.py  cli.py  deploy_parameters.py  evaluate_fitness_adaptor.py  evolution_experiment.py  fetch_assets.py  install_optional_deps.ps1  install_optional_deps.sh  lint.sh  migrate_config_registry.py  production_auto_optimizer.py  production_genetic_algorithm.py  reflect_history.py  retrain_cron.sh  rollback.sh  rpc_smoke_test.py  run  run_python_tests.sh  run_tests.sh  setup.ps1  setup.sh  train_decision_rl.py  train_meta_learning.py  train_planner_rl.py  typecheck.sh
selenium/: __init__.py
spacy/: __init__.py
tests/: conftest.py  test_agent_lifecycle_manager.py  test_algorithms.py  test_audio_gen.py  test_cerebellum_integration.py  test_emotion_engine.py  test_ethics_engine.py  test_file_operations.py  test_forge_sdk_agent_errors.py  test_forge_sdk_db.py  test_health_monitor.py  test_image_analysis_command.py  test_knowledge_graph.py  test_long_term_memory.py  test_maml.py  test_metrics_recorder.py  test_ml_training_strategies.py  test_monitoring.py  test_motor_actuator_integration.py  test_motor_cortex.py  test_neural_oscillations.py  test_neuro_symbolic_solver.py  test_new_modules.py  test_nn_architectures.py  test_one_shot_model_classification.py  test_performance_anomaly_detection.py  test_performance_calibrator.py  test_planner_executor.py  test_prompt_tokens.py  test_reasoning_planner.py  test_remediation_manager.py  test_runtime_module_manager.py  test_self_improvement.py  test_self_monitoring.py  test_sensory_cortex.py  test_storage_algorithms.py  test_train_models.py  test_ui_conversation_store.py
(+1182 files in other folders)
