[tool.poetry]
name = "autogpt-monorepo"
version = "0.5.1"
description = "Unified AutoGPT workspace"
authors = ["AutoGPT Contributors <support@agpt.co>"]

[tool.poetry.workspace]
members = [
  "third_party/autogpt",
  "third_party/autogpt/autogpt/core",
  "backend/forge",
  "modules/benchmark"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
openai = ">=1.7.2,<2.0.0"
click = ">=8.1.7,<9.0.0"
colorama = ">=0.4.6,<0.5.0"
pydantic = ">=1.10.12,<2.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
requests = ">=2.31.0,<3.0.0"
fastapi = ">=0.109.1,<0.110.0"
uvicorn = ">=0.23.2,<0.24.0"
selenium = ">=4.13.0,<5.0.0"
tenacity = ">=8.2.2,<9.0.0"
gitpython = ">=3.1.32,<4.0.0"
psutil = ">=5.9.5,<6.0.0"
matplotlib = ">=3.7.2,<4.0.0"
pandas = ">=2.0.3,<3.0.0"
networkx = ">=3.1,<4.0.0"
pyvis = ">=0.3.2,<0.4.0"
pytest = ">=7.4.0,<8.0.0"
pytest-asyncio = ">=0.21.1,<0.22.0"
python-multipart = ">=0.0.7,<0.0.8"
toml = ">=0.10.2,<0.11.0"
httpx = ">=0.24.0,<0.25.0"
agent-protocol-client = ">=1.1.0,<2.0.0"
click-default-group = ">=1.2.4,<2.0.0"
tabulate = ">=0.9.0,<0.10.0"
beautifulsoup4 = ">=4.12.2,<5.0.0"
boto3 = ">=1.33.6,<2.0.0"
charset-normalizer = ">=3.1.0,<4.0.0"
demjson3 = ">=3.0.0,<4.0.0"
distro = ">=1.8.0,<2.0.0"
docker = ">=6.1,<6.2.0"
duckduckgo-search = ">=5.0.0,<6.0.0"
ftfy = ">=6.1.1,<7.0.0"
gTTS = ">=2.3.1,<3.0.0"
hypercorn = ">=0.14.4,<0.15.0"
jsonschema = ">=4.19.1,<5.0.0"
openapi-python-client = ">=0.14.0,<0.15.0"
orjson = ">=3.8.10,<4.0.0"
pinecone-client = ">=2.2.1,<3.0.0"
playsound = ">=1.2.2,<1.3.0"
pypdf = ">=3.1.0,<4.0.0"
pyyaml = ">=6.0,<7.0.0"
qiskit = ">=2.1.2,<3.0.0"
readability-lxml = ">=0.8.1,<0.9.0"
redis = ">=5.0,<5.1.0"
structlog = ">=25.4.0,<26.0.0"
spacy = ">=3.0.0,<4.0.0"
tiktoken = ">=0.5.1,<0.6.0"
watchdog = ">=3.0.0,<4.0.0"
google-cloud-logging = ">=3.8.0,<4.0.0"
google-cloud-storage = ">=2.13.0,<3.0.0"
psycopg2-binary = ">=2.9.9,<3.0.0"
agent-protocol = ">=1.0.2,<2.0.0"
colorlog = ">=6.7.0,<7.0.0"
sqlalchemy = ">=2.0.19,<3.0.0"
aiofiles = ">=24.1.0,<25.0.0"
aiohttp = ">=3.8.5,<4.0.0"
chromadb = ">=0.4.10,<0.5.0"
jinja2 = ">=3.1.2,<4.0.0"
litellm = ">=1.17.9,<2.0.0"
mcp = ">=1.14.1,<2.0.0"
bs4 = ">=0.0.1,<0.0.2"
packaging = ">=23.1,<26.0"
auto-gpt-plugin-template = { git = "https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template", rev = "7612a14c629dc64ad870eee4d05850d60e1dd9ce" } # 0.1.0
autogpt-forge = { path = "backend/forge" }
agbenchmark = { path = "modules/benchmark", optional = true }
pytest-benchmark = ">=3.4.1,<4.0.0"
coverage = ">=7.2.7,<8.0.0"
cachetools = ">=5.3.1,<6.0.0"
scikit-learn = ">=1.4.0,<2.0.0"
torch = ">=2.1.0,<3.0.0"
torchvision = ">=0.16.0,<0.17.0"
numpy = ">=1.24.0,<2.0.0"
transformers = ">=4.38.0,<5.0.0"
onnxruntime = { version = ">=1.16.0,<2.0.0", optional = true }
tensorrt = { version = ">=8.6.0,<9.0.0", optional = true }
chinese-calendar = ">=1.10.0,<2.0.0"
lunardate = ">=0.2.2,<1.0.0"

[tool.poetry.scripts]
brain-auto-check = "BrainSimulationSystem.core.automation_check:run_automated_checks"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0,<24.0.0"
pytest-mock = ">=3.12.0,<4.0.0"
flake8 = ">=6.0.0,<7.0.0"
isort = ">=5.12.0,<6.0.0"
mypy = ">=1.4.1,<2.0.0"
pre-commit = ">=3.3.3,<4.0.0"
pip-audit = ">=2.9.0,<3.0.0"
autoflake = ">=2.2.0,<3.0.0"
types-requests = ">=2.31.0.2,<3.0.0"
ruff = ">=0.1.11,<0.2.0"

[tool.poetry.extras]
edge = ["onnxruntime", "tensorrt"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests/vcr_cassettes"]

[tool.ruff.lint]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "BrainSimulationSystem/tests"]
